fix: max-width for header and footer, text align blog

--- a/assets/css/blog.css
+++ b/assets/css/blog.css
@@ -96,6 +96,7 @@
   font-size: 12px;
   color: var(--sce-ds);
   margin: 20px 0;
+  text-align: left;
 }
 .blog .post .detail {
   text-decoration: none;
