--- a/assets/css/navbar.css
+++ b/assets/css/navbar.css
@@ -5,6 +5,10 @@
   font-size: 14px;
 }
 
+#header .cover {
+  max-width: 1440px;
+}
+
 .custom-navbar {
   background-color: white;
   width: 100%; /* Changed to 100% to be responsive */
